<resources>
    <string name="app_name">lab05</string>
    <string name="FIO">Селивёрстов Артём Евгеньевич</string>
    <string name="Grupp">Группа 225</string>
    <string name="Dialog">Send</string>
    <string name="Exit">Exit App</string>
    <string name="OK">OK</string>
    <string name="NO">CANCEL</string>
    <string name="Switch1">1Switch</string>
    <string name="Switch2">2Switch</string>
    <string name="Check1">1Check</string>
    <string name="Check2">2Check</string>
    <string name="DIALOG">Open Dialog</string>
</resources>